--- a/Platformer/Platformer.csproj
+++ b/Platformer/Platformer.csproj
@@ -45,6 +45,7 @@
     <Compile Include="Core\Bloc.cs" />
     <Compile Include="Core\Constants.cs" />
     <Compile Include="Core\GameObject.cs" />
+    <Compile Include="Core\Ice.cs" />
     <Compile Include="Core\MobileGameObject.cs" />
     <Compile Include="Core\Player.cs" />
     <Compile Include="Core\Sky.cs" />
