--- a/Platformer/Platformer.csproj
+++ b/Platformer/Platformer.csproj
@@ -48,6 +48,7 @@
     <Compile Include="Core\Ice.cs" />
     <Compile Include="Core\MobileGameObject.cs" />
     <Compile Include="Core\Player.cs" />
+    <Compile Include="Core\Shot.cs" />
     <Compile Include="Core\Sky.cs" />
     <Compile Include="Core\Trampoline.cs" />
     <Compile Include="Game1.cs" />
