--- a/Platformer/Platformer.csproj
+++ b/Platformer/Platformer.csproj
@@ -43,10 +43,12 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Core\Bloc.cs" />
+    <Compile Include="Core\Checkpoint.cs" />
     <Compile Include="Core\Constants.cs" />
     <Compile Include="Core\GameObject.cs" />
     <Compile Include="Core\Ice.cs" />
     <Compile Include="Core\MobileGameObject.cs" />
+    <Compile Include="Core\Monster.cs" />
     <Compile Include="Core\Player.cs" />
     <Compile Include="Core\Shot.cs" />
     <Compile Include="Core\Sky.cs" />
